[package]
name = "staking_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["local-testing","test-id"]
local-testing = []
test-id = []
verbose = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
solana-program = "1.8.10"
