[package]
name = "solana-stakinig"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_vesting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.0"
anchor-spl = {version = "0.20.1"}
arrayref = "0.3.6"
spl-associated-token-account = { version="1.0.3", features = [ "no-entrypoint" ] }
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.6.6"
